nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # for outside world
      targetPort: 80 # for app world
  type: ClusterIP
